GNOME Bugzilla – Bug 658863
menu button applet won't load on gnome-panel 3.1.5
Last modified: 2011-09-19 15:14:10 UTC
As subject says, the menu button applet fails to load with the newer gnome-panel. When trying to add the applet to the panel, this message is logged to ~/.xsession-errors: "Unknown menu scheme, cannot load menu button"
Thanks, fixed in git.