panel: Fix loading of main menu

https://bugzilla.gnome.org/show_bug.cgi?id=658863